--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -1,9 +1,6 @@
-<%- include('partials/_header'); -%>
-	<!-- END LOADER -->	
+<%- include('partials/_header'); %>
 
-    <!-- Start header -->
-	<%- include('partials/_navigation'); -%>
-	<!-- End header -->
+<%- include('partials/_navigation'); %>
 	
 	<div class="all-title-box">
 		<div class="container text-center">
@@ -15,8 +12,9 @@
         <div class="container">
             <div class="row"> 
                 <div class="col-lg-9 blog-post-single">
-			 	<div class="row"> 
-			<% for(let i = 0; i< courses.length; i++) { %>
+				<div class="row"> 
+
+			<% for (let i=0; i< courses.length; i++) { %>
                 <div class="col-lg-6 col-md-6 col-12">
                     <div class="course-item mb-5">
 						<div class="image-blog">
@@ -24,10 +22,10 @@
 						</div>
 						<div class="course-br">
 							<div class="course-title">
-								<h2><a href="course-single.html" title=""><% courses[i].name%></a></h2>
+								<h2><a href="course-single.html" title=""><%= courses[i].name %></a></h2>
 							</div>
 							<div class="course-desc">
-								<p><% courses[i].description%></p>
+								<p><%= courses[i].description %></p>
 							</div>
 						</div>
 						<div class="course-meta-bot">
@@ -37,8 +35,11 @@
 						</div>
 					</div>
                 </div><!-- end col -->
-            </div><!-- end row -->
+
 			<% } %>
+	
+            </div><!-- end row -->
+					
                 </div><!-- end col -->
 				<div class="col-lg-3 col-12 right-single">
 					<div class="widget-search">
@@ -68,12 +69,4 @@
     </div><!-- end section -->
 
 
-	<%- include('partials/_footer'); -%>
-
-    <!-- ALL JS FILES -->
-    <script src="js/all.js"></script>
-    <!-- ALL PLUGINS -->
-    <script src="js/custom.js"></script>
-
-</body>
-</html>
+	<%- include('partials/_footer'); %>
