--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -1,6 +1,9 @@
-<%- include('partials/_header'); %>
+<%- include('partials/_header'); -%>
+	<!-- END LOADER -->	
 
-<%- include('partials/_navigation'); %>
+    <!-- Start header -->
+	<%- include('partials/_navigation'); -%>
+	<!-- End header -->
 	
 	<div class="all-title-box">
 		<div class="container text-center">
@@ -12,20 +15,19 @@
         <div class="container">
             <div class="row"> 
                 <div class="col-lg-9 blog-post-single">
-				<div class="row"> 
-
-			<% for (let i=0; i< courses.length; i++) { %>
+			 	<div class="row"> 
+			<% for(let i = 0; i< courses.length; i++) { %>
                 <div class="col-lg-6 col-md-6 col-12">
                     <div class="course-item mb-5">
 						<div class="image-blog">
-							<img src="images/blog_1.jpg" alt="" class="img-fluid">
+							<img src="/images/blog_1.jpg" alt="" class="img-fluid">
 						</div>
 						<div class="course-br">
 							<div class="course-title">
-								<h2><a href="course-single.html" title=""><%= courses[i].name %></a></h2>
+								<h2><a href="/courses/<%= courses[i].slug %>" title=""><%= courses[i].name%></a></h2>
 							</div>
 							<div class="course-desc">
-								<p><%= courses[i].description %></p>
+								<p><%= courses[i].description%></p>
 							</div>
 						</div>
 						<div class="course-meta-bot">
@@ -35,11 +37,9 @@
 						</div>
 					</div>
                 </div><!-- end col -->
-
-			<% } %>
-	
+				<% } %>
             </div><!-- end row -->
-					
+			
                 </div><!-- end col -->
 				<div class="col-lg-3 col-12 right-single">
 					<div class="widget-search">
@@ -55,12 +55,9 @@
 					<div class="widget-categories">
 						<h3 class="widget-title">Categories</h3>
 						<ul>
-							<li><a href="#">Political Science</a></li>
-							<li><a href="#">Business Leaders Guide</a></li>
-							<li><a href="#">Become a Product Manage</a></li>
-							<li><a href="#">Language Education</a></li>
-							<li><a href="#">Micro Biology</a></li>
-							<li><a href="#">Social Media Management</a></li>
+							<% for(let i = 0; i< categories.length; i++) { %>
+							<li><a href="/courses?categories=<%=categories[i].slug %>"><%= categories[i].name %></a></li>
+							<% } %>
 						</ul>
 					</div>
 				</div>
@@ -69,4 +66,12 @@
     </div><!-- end section -->
 
 
-	<%- include('partials/_footer'); %>
+	<%- include('partials/_footer'); -%>
+
+    <!-- ALL JS FILES -->
+    <script src="js/all.js"></script>
+    <!-- ALL PLUGINS -->
+    <script src="js/custom.js"></script>
+
+</body>
+</html>
