--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -7,7 +7,7 @@
 	
 	<div class="all-title-box">
 		<div class="container text-center">
-			<h1>Course Single<span class="m_1">Lorem Ipsum dolroin gravida nibh vel velit.</span></h1>
+			<h1><%= user.name %><span class="m_1">Lorem Ipsum dolroin gravida nibh vel velit.</span></h1>
 		</div>
 	</div>
 	
@@ -24,7 +24,7 @@
 							</p>
 						</div>
 						<div class="author-desc">
-							<img src="images/author.jpg" alt="about author">
+							<img src="/images/author.jpg" alt="about author">
 						</div>
 					</div>
 					
@@ -34,7 +34,7 @@
                 <div class="col-lg-6 col-md-6 col-12">
                     <div class="course-item mb-5">
 						<div class="image-blog">
-							<img src="images/blog_1.jpg" alt="" class="img-fluid">
+							<img src="/images/blog_1.jpg" alt="" class="img-fluid">
 						</div>
 						<div class="course-br">
 							<div class="course-title">
@@ -50,7 +50,7 @@
                 <div class="col-lg-6 col-md-6 col-12">
                     <div class="course-item mb-5">
 						<div class="image-blog">
-							<img src="images/blog_2.jpg" alt="" class="img-fluid">
+							<img src="/images/blog_2.jpg" alt="" class="img-fluid">
 						</div>
 						<div class="course-br">
 							<div class="course-title">
@@ -65,7 +65,7 @@
 				                <div class="col-lg-6 col-md-6 col-12">
                     <div class="course-item mb-5">
 						<div class="image-blog">
-							<img src="images/blog_2.jpg" alt="" class="img-fluid">
+							<img src="/images/blog_2.jpg" alt="" class="img-fluid">
 						</div>
 						<div class="course-br">
 							<div class="course-title">
@@ -80,7 +80,7 @@
 				  <div class="col-lg-6 col-md-6 col-12">
                     <div class="course-item mb-5">
 						<div class="image-blog">
-							<img src="images/blog_2.jpg" alt="" class="img-fluid">
+							<img src="/images/blog_2.jpg" alt="" class="img-fluid">
 						</div>
 						<div class="course-br">
 							<div class="course-title">
@@ -99,9 +99,9 @@
     <%- include('partials/_footer'); -%>
 
     <!-- ALL JS FILES -->
-    <script src="js/all.js"></script>
+    <script src="/js/all.js"></script>
     <!-- ALL PLUGINS -->
-    <script src="js/custom.js"></script>
+    <script src="/js/custom.js"></script>
 
 </body>
 </html>
