--- a/views/course.ejs
+++ b/views/course.ejs
@@ -7,7 +7,7 @@
 	
 	<div class="all-title-box">
 		<div class="container text-center">
-			<h1><%= course.name%><span class="m_1">Lorem Ipsum dolroin gravida nibh vel velit.</span></h1>
+			<h1><%= course.name %><span class="m_1">Lorem Ipsum dolroin gravida nibh vel velit.</span></h1>
 		</div>
 	</div>
 	
@@ -20,10 +20,15 @@
 							<img src="/images/blog_single.jpg" alt="" class="img-fluid">
 						</div>
 						<div class="post-content">
+
+							<% if (user && !(user.courses.includes(course._id))) { %>
 							<div class="post-date">
-								<span class="day">30</span>
-								<span class="month">Nov</span>
+								<form method="POST" action="/courses/enroll">
+									<input type="hidden" name="course_id" value="<%= course._id %>">
+									<button class="btn btn-lg btn-warning text-white"><span>ENROLL</span></button>
+								</form>
 							</div>
+							<% } %>
 							<div class="meta-info-blog">
 								<span><i class="fa fa-calendar"></i> <a href="#">May 11, 2015</a> </span>
 							</div>
@@ -33,18 +38,17 @@
 							<div class="blog-desc">
 								<p></p>
 								<blockquote class="default">
-									<%= course.description%>
+									<%= course.description %>
 								</blockquote>
-								<p></p>
-								<p></p>
+								
 							</div>							
 						</div>
 					</div>
 					
 					<div class="blog-author">
 						<div class="author-bio">
-							<h3 class="author_name"><a href="#">Tom Jobs</a></h3>
-							<h5>CEO at <a href="#">SmartEDU</a></h5>
+							<h3 class="author_name"><a href="#"><%= course.user.name %></a></h3>
+							<h5>Teacher at <a href="#">SmartEDU</a></h5>
 							<p class="author_det">
 								Lorem ipsum dolor sit amet, consectetur adip, sed do eiusmod tempor incididunt  ut aut reiciendise voluptat maiores alias consequaturs aut perferendis doloribus omnis saperet docendi nec, eos ea alii molestiae aliquand.
 							</p>
@@ -63,10 +67,10 @@
 				<div class="col-lg-3 col-12 right-single">
 					<div class="widget-search">
 						<div class="site-search-area">
-							<form method="get" id="site-searchform" action="#">
+							<form method="GET" id="site-searchform" action="/courses">
 								<div>
-									<input class="input-text form-control" name="search-k" id="search-k" placeholder="Search keywords..." type="text">
-									<input id="searchsubmit" value="Search" type="submit">
+									<input class="input-text form-control" name="search" id="search" placeholder="Search..." type="text">
+									<button id="searchsubmit" value="Search" type="submit"></button>
 								</div>
 							</form>
 						</div>
@@ -74,12 +78,9 @@
 					<div class="widget-categories">
 						<h3 class="widget-title">Categories</h3>
 						<ul>
-							<li><a href="#">Political Science</a></li>
-							<li><a href="#">Business Leaders Guide</a></li>
-							<li><a href="#">Become a Product Manage</a></li>
-							<li><a href="#">Language Education</a></li>
-							<li><a href="#">Micro Biology</a></li>
-							<li><a href="#">Social Media Management</a></li>
+							<% for (let i = 0; i< categories.length; i++) { %>
+							<li><a href="/courses?categories=<%=categories[i].slug %>"><%= categories[i].name %></a></li>
+							<% } %>
 						</ul>
 					</div>
 				</div>
