--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,8 +1,6 @@
-<%- include('partials/_header'); -%>
+<%- include('partials/_header'); %>
 
-    <!-- Start header -->
-	<%- include('partials/_navigation'); -%>
-	<!-- End header -->
+<%- include('partials/_navigation'); %>
 	
 	<div class="all-title-box">
 		<div class="container text-center">
@@ -185,11 +183,4 @@
         </div><!-- end container -->
     </div><!-- end section -->
 
-   <%- include('partials/_footer'); -%>
-    <!-- ALL JS FILES -->
-    <script src="js/all.js"></script>
-    <!-- ALL PLUGINS -->
-    <script src="js/custom.js"></script>
-
-</body>
-</html>
+    <%- include('partials/_footer'); %>
