--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,9 +1,6 @@
-<%- include('partials/_header'); -%>
-	<!-- END LOADER -->	
+<%- include('partials/_header'); %>
 
-    <!-- Start header -->
-	<%- include('partials/_navigation'); -%>
-	<!-- End header -->
+<%- include('partials/_navigation'); %>
 	
 	<div class="all-title-box">
 		<div class="container text-center">
@@ -22,16 +19,22 @@
                 <div class="offset-1 col-xl-10 col-md-10 col-sm-10">
 
                     <% if (flashMessages) { %>
+
+
                         <% if (flashMessages.success) { %>
                             <div class="alert alert-success">
                                 <%= flashMessages.success %>
                             </div>
-                        <%} else if (flashMessages.error) { %>
+
+                        <% } else if (flashMessages.error) { %>
                             <div class="alert alert-danger">
                                 <%= flashMessages.error %>
                             </div>
                         <% } %>
+
                     <% } %>
+
+
 
                     <div class="contact_form">
                         <div id="message"></div>
@@ -40,11 +43,11 @@
                                 <div class="col-lg-6 col-md-6 col-sm-6">
                                     <input type="text" name="name" id="first_name" class="form-control" placeholder="Your Name">
                                 </div>
-                                
+
                                 <div class="col-lg-6 col-md-6 col-sm-6">
                                     <input type="email" name="email" id="email" class="form-control" placeholder="Your Email">
                                 </div>
-                               
+
                                 <div class="col-lg-12 col-md-12 col-sm-12">
                                     <textarea class="form-control" name="message" id="comments" rows="6" placeholder="Give us more details.."></textarea>
                                 </div>
@@ -60,11 +63,4 @@
     </div><!-- end section -->
 
 
-    <%- include('partials/_footer'); -%>
-    <!-- ALL JS FILES -->
-    <script src="js/all.js"></script>
-    <!-- ALL PLUGINS -->
-    <script src="js/custom.js"></script>
-
-</body>
-</html>
+    <%- include('partials/_footer'); %>
