--- a/views/course.ejs
+++ b/views/course.ejs
@@ -1,9 +1,6 @@
-<%- include('partials/_header'); -%>
-	<!-- END LOADER -->	
+<%- include('partials/_header'); %>
 
-    <!-- Start header -->
-	<%- include('partials/_navigation'); -%>
-	<!-- End header -->
+<%- include('partials/_navigation'); %>
 	
 	<div class="all-title-box">
 		<div class="container text-center">
@@ -21,7 +18,7 @@
 						</div>
 						<div class="post-content">
 
-							<% if (user && !(user.courses.includes(course._id))) { %>
+							<% if (user && !(user.courses.includes(course._id)) ) { %> 
 							<div class="post-date">
 								<form method="POST" action="/courses/enroll">
 									<input type="hidden" name="course_id" value="<%= course._id %>">
@@ -33,14 +30,14 @@
 								<span><i class="fa fa-calendar"></i> <a href="#">May 11, 2015</a> </span>
 							</div>
 							<div class="blog-title">
-								<h2><a href="#" title=""><%= course.name%></a></h2>
+								<h2><a href="#" title=""><%= course.name %></a></h2>
 							</div>
 							<div class="blog-desc">
-								<p></p>
+								
 								<blockquote class="default">
 									<%= course.description %>
 								</blockquote>
-								
+
 							</div>							
 						</div>
 					</div>
@@ -48,18 +45,7 @@
 					<div class="blog-author">
 						<div class="author-bio">
 							<h3 class="author_name"><a href="#"><%= course.user.name %></a></h3>
-							<h5>Teacher at <a href="#">SmartEDU</a></h5>
-							<p class="author_det">
-								Lorem ipsum dolor sit amet, consectetur adip, sed do eiusmod tempor incididunt  ut aut reiciendise voluptat maiores alias consequaturs aut perferendis doloribus omnis saperet docendi nec, eos ea alii molestiae aliquand.
-							</p>
-						</div>
-						<div class="author-desc">
-							<img src="/images/author.jpg" alt="about author">
-							<ul class="author-social">
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-skype"></i></a></li>
-							</ul>
+
 						</div>
 					</div>
 					
@@ -69,7 +55,7 @@
 						<div class="site-search-area">
 							<form method="GET" id="site-searchform" action="/courses">
 								<div>
-									<input class="input-text form-control" name="search" id="search" placeholder="Search..." type="text">
+									<input class="input-text form-control" name="search" id="search-k" placeholder="Search..." type="text">
 									<button id="searchsubmit" value="Search" type="submit"></button>
 								</div>
 							</form>
@@ -78,9 +64,9 @@
 					<div class="widget-categories">
 						<h3 class="widget-title">Categories</h3>
 						<ul>
-							<% for (let i = 0; i< categories.length; i++) { %>
-							<li><a href="/courses?categories=<%=categories[i].slug %>"><%= categories[i].name %></a></li>
-							<% } %>
+							<% for (let i=0; i< categories.length; i++) { %>
+							<li><a href="/courses?categories=<%= categories[i].slug %>"><%= categories[i].name %></a></li>
+							<% } %>	
 						</ul>
 					</div>
 				</div>
@@ -88,12 +74,4 @@
         </div><!-- end container -->
     </div><!-- end section -->
 
-    <%- include('partials/_footer'); -%>
-
-    <!-- ALL JS FILES -->
-    <script src="/js/all.js"></script>
-    <!-- ALL PLUGINS -->
-    <script src="/js/custom.js"></script>
-
-</body>
-</html>
+	<%- include('partials/_footer'); %>
