--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,9 +1,6 @@
-<%- include('partials/_header'); -%>
-	<!-- END LOADER -->	
-	
-	<!-- Start header -->
-	<%- include('partials/_navigation'); -%>
-	<!-- End header -->
+<%- include('partials/_header'); %>
+
+<%- include('partials/_navigation'); %>
 	
 	        <div class="container">
             <div class="section-title text-center">
@@ -17,15 +14,18 @@
                             <div class="row row-fluid">
                                 <div class="offset-1 col-lg-10 col-md-10 col-sm-10">
                                     <% if (flashMessages) { %>
+    
                                         <% if (flashMessages.success) { %>
                                             <div class="alert alert-success">
                                                 <%= flashMessages.success %>
                                             </div>
-                                        <%} else if (flashMessages.error) { %>
+                
+                                        <% } else if (flashMessages.error) { %>
                                             <div class="alert alert-danger">
                                                 <%= flashMessages.error %>
                                             </div>
                                         <% } %>
+                
                                     <% } %>
                                 </div>
                                 <div class="offset-1 col-lg-10 col-md-10 col-sm-10">
@@ -46,21 +46,4 @@
         </div><!-- end container -->
 	 </div><!-- end container -->
 	
-
-     <%- include('partials/_footer'); -%>
-
-    <!-- ALL JS FILES -->
-    <script src="js/all.js"></script>
-    <!-- ALL PLUGINS -->
-    <script src="js/custom.js"></script>
-	<script src="js/timeline.min.js"></script>
-	<script>
-		timeline(document.querySelectorAll('.timeline'), {
-			forceVerticalMode: 700,
-			mode: 'horizontal',
-			verticalStartPosition: 'left',
-			visibleItems: 4
-		});
-	</script>
-</body>
-</html>
+     <%- include('partials/_footer'); %>
