--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,9 +1,6 @@
-<%- include('partials/_header'); -%>
-	<!-- END LOADER -->	
-	
-	<!-- Start header -->
-	<%- include('partials/_navigation'); -%>
-	<!-- End header -->
+<%- include('partials/_header'); %>
+
+<%- include('partials/_navigation'); %>
 	
 	        <div class="container">
             <div class="section-title text-center">
@@ -17,15 +14,18 @@
                             <div class="row row-fluid">
                                 <div class="offset-1 col-lg-10 col-md-10 col-sm-10">
                                 <% if (flashMessages) { %>
+
                                     <% if (flashMessages.success) { %>
                                         <div class="alert alert-success">
                                             <%= flashMessages.success %>
                                         </div>
-                                    <%} else if (flashMessages.error) { %>
+            
+                                    <% } else if (flashMessages.error) { %>
                                         <div class="alert alert-danger">
                                             <%= flashMessages.error %>
                                         </div>
                                     <% } %>
+            
                                 <% } %>
                             </div>
 							    <div class="offset-1 col-lg-10 col-md-10 col-sm-10">
@@ -35,13 +35,16 @@
                                     <input type="email" name="email" id="email" class="form-control" placeholder="Email">
                                 </div>
                                 <div class="offset-1 col-lg-10 col-md-10 col-sm-10">
-                                    <select class="form-control" name="role">
-                                        <option value="student">Student</option>
-                                        <option value="teacher">Teacher</option>
+                                   <select class="form-control" name="role">
+                                       <option>student</option>
+                                       <option>teacher</option>
+                                   </select>
                                 </div>
+
                                 <div class="offset-1 col-lg-10 col-md-10 col-sm-10">
                                     <input type="password" name="password" id="password" class="form-control" placeholder="Password">
                                 </div>
+
                                 <div class="offset-1 col-lg-10 col-md-10 col-sm-10">
                                     <button type="submit" value="LOGIN" id="submit" class="btn btn-light btn-radius btn-brd grd1 btn-block">REGISTER</button>
                                 </div>
@@ -54,19 +57,4 @@
 	 </div><!-- end container -->
 	
 
-    <%- include('partials/_footer'); -%>
-    <!-- ALL JS FILES -->
-    <script src="js/all.js"></script>
-    <!-- ALL PLUGINS -->
-    <script src="js/custom.js"></script>
-	<script src="js/timeline.min.js"></script>
-	<script>
-		timeline(document.querySelectorAll('.timeline'), {
-			forceVerticalMode: 700,
-			mode: 'horizontal',
-			verticalStartPosition: 'left',
-			visibleItems: 4
-		});
-	</script>
-</body>
-</html>
+     <%- include('partials/_footer'); %>
